@@ -1,5 +1,10 @@
 2007-07-28  Thomas Wood  <thos@gnome.org>
 
+	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): c89 fix and add 1px
+	border between selection indicator and contents
+
+2007-07-28  Thomas Wood  <thos@gnome.org>
+
 	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): Use cairo to draw the
 	cell renderer selection
 
